--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm install",
-    "start": "node index.js",
+    "start": "forever server.js",
     "watch": "forever -w server.js",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint .",
