--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "core-js": "^3.18.2",
     "forever": "^4.0.1",
     "koa": "^2.13.4",
-    "koa-body": "^4.2.0"
+    "koa-body": "^4.2.0",
+    "koa2-cors": "^2.0.6"
   }
 }
